--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=todo
+# --- Configuração do Banco de Dados ---
+spring.datasource.url=jdbc:mysql://localhost:3306/todo
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# --- Configuração do Hibernate ---
+spring.jpa.hibernate.ddl-auto=update
